Documentation and improved structure for backend
