# backend/lib/Controllers/CentrosController.ts
@@ -1,6 +1,8 @@
 import { Request, Response } from "express";
 import { CentrosModel } from "../Models/CentrosModel";
 import { BaseController } from "./BaseController";
+import { MunicipiosModel } from "../Models/MunicipiosModel";
+import { MesasModel } from "../Models/MesasModel";
 
 export abstract class CentrosController extends BaseController {
   private constructor() {
@@ -8,13 +10,17 @@ export abstract class CentrosController extends BaseController {
   }
 
   /**
-   * Returns the public list of Centros, for Express
    *
    * @param req
    * @param res
    */
-  public static async getList(req: Request, res: Response) {
-    const items = await CentrosModel.scan().exec();
+  public static async getByMunicipio(req: Request, res: Response) {
+    const municipio = await MunicipiosModel.get(req.params.id);
+    if (!municipio) return res.status(404).end();
+    const items = await CentrosModel.scan("municipio_uuid")
+      .eq(req.params.id)
+      .attributes(["uuid", "nombre", "código", "recuentos"])
+      .exec();
     res.status(200).json(items).end();
   }
 
@@ -25,20 +31,10 @@ export abstract class CentrosController extends BaseController {
    * @param res
    */
   public static async getItem(req: Request, res: Response) {
-    const item = await CentrosModel.get(req.params.id);
+    const item = await CentrosModel.get(req.params.id, {
+      attributes: ["uuid", "nombre", "código", "recuentos"],
+    });
     if (!item) return res.status(404).end();
     res.status(200).json(item).end();
-  }
-
-  /**
-   * 
-   * @param req
-   * @param res 
-   */
-  public static async getByMunicipio(req: Request, res: Response) {
-    const items = await CentrosModel.scan('municipio_uuid').eq(req.params.id).exec();
-    if (!items) return res.status(404).end();
-    let newItems = items.map(function (item: any){ return [{"uuid": item.uuid, "nombre": item.nombre, "código": item.código}]})
-    res.status(200).json(newItems).end();
   }
 }
