# backend/lib/Controllers/MunicipiosController.ts
@@ -1,6 +1,7 @@
 import { Request, Response } from "express";
 import { MunicipiosModel } from "../Models/MunicipiosModel";
 import { BaseController } from "./BaseController";
+import { DepartamentosModel } from "../Models/DepartamentosModel";
 
 export abstract class MunicipiosController extends BaseController {
   private constructor() {
@@ -8,13 +9,18 @@ export abstract class MunicipiosController extends BaseController {
   }
 
   /**
-   * Returns the public list of Municipios, for Express
    *
    * @param req
    * @param res
    */
-  public static async getList(req: Request, res: Response) {
-    const items = await MunicipiosModel.scan().exec();
+  public static async getByDepartamento(req: Request, res: Response) {
+    const departamento = await DepartamentosModel.get(req.params.id);
+    if (!departamento) return res.status(404).end();
+
+    const items = await MunicipiosModel.scan("departamento_uuid")
+      .eq(req.params.id)
+      .attributes(["uuid", "nombre", "código", "recuentos"])
+      .exec();
     res.status(200).json(items).end();
   }
 
@@ -25,20 +31,10 @@ export abstract class MunicipiosController extends BaseController {
    * @param res
    */
   public static async getItem(req: Request, res: Response) {
-    const item = await MunicipiosModel.get(req.params.id);
+    const item = await MunicipiosModel.get(req.params.id, {
+      attributes: ["uuid", "nombre", "código", "recuentos"],
+    });
     if (!item) return res.status(404).end();
     res.status(200).json(item).end();
-  }
-
-  /**
-   * 
-   * @param req
-   * @param res 
-   */
-  public static async getByDepartamento(req: Request, res: Response) {
-    const items = await MunicipiosModel.scan('departamento_uuid').eq(req.params.id).exec();
-    if (!items) return res.status(404).end();
-    let newItems = items.map(function (item: any){ return [{"uuid": item.uuid, "nombre": item.nombre, "código": item.código}]})
-    res.status(200).json(newItems).end();
   }
 }
